--- a/Launcher/App/src/main/res/values/strings.xml
+++ b/Launcher/App/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="background_opacity">Background Opacity</string>
     <string name="icons_size">Icon Size</string>
     <string name="show_app_names">Show App Names</string>
+
+    <string name="service_desc">When this service is enabled, Lightning Launcher will open automatically when you hover the cursor over the App Library icon for about half a second. This may make it difficult to access the normal app launcher!</string>
+    <string name="accessibility_event_name">[App Library]</string>
 </resources>
