--- a/Launcher/App/src/main/res/values/strings.xml
+++ b/Launcher/App/src/main/res/values/strings.xml
@@ -63,8 +63,6 @@
     <string name="add_website_bad_url">Enter a valid URL and try again</string>
     <string name="add_website_group">Add to %s</string>
 
-    <string name="website_running">Running…</string>
-
     <string name="service_title">Launcher Shortcuts</string>
     <string name="service_subtitle">Easily Access Lightning Launcher</string>
     <string name="service_info">By enabling the shortcut service, Lighting Launcher will open when you hover over the App Library icon on the right of the dock,
@@ -102,5 +100,22 @@
     <string name="update_downloading_title">Downloading Update</string>
     <string name="update_downloading_content">You should get a prompt to install in a few seconds</string>
     <string name="update_dismiss_button">Hide</string>
+
+    <!--  Tooltips  -->
+    <string name="web_back">Navigate Back</string>
+    <string name="web_forward">Navigate Forward</string>
+    <string name="web_reload">Refresh this Page</string>
+    <string name="web_zoom_in">Increase Zoom</string>
+    <string name="web_zoom_out">Decrease Zoom</string>
+    <string name="web_exit">Return to Launcher</string>
+    <string name="web_dark">Set Dark Mode</string>
+    <string name="web_light">Set Light Mode</string>
+
+    <string name="kill_process">Stop Running in the Background</string>
+    <string name="website_group">This is set as the default group for websites</string>
+
+    <string name="uninstall">Uninstall / Remove</string>
+    <string name="info">Android App Info</string>
+    <string name="change_icon">Change Icon</string>
 
 </resources>
