--- a/Launcher/App/src/main/res/values/strings.xml
+++ b/Launcher/App/src/main/res/values/strings.xml
@@ -64,7 +64,7 @@
     </string>
 
     <string name="add_website">Add a Website</string>
-    <string name="add_website_url_label">Website URL</string>
+    <string name="add_website_url_label">Enter Any Website URL</string>
     <string name="add_website_bad_url">Enter a valid URL and try again</string>
     <string name="add_website_group">Add to %s</string>
 
@@ -129,5 +129,12 @@
     <string name="uninstall">Uninstall / Remove</string>
     <string name="info">Android App Info</string>
     <string name="change_icon">Change Icon</string>
+
+    <!--  Web Presets  -->
+    <string name="preset_google">google.com</string>
+    <string name="preset_youtube">youtube.com</string>
+    <string name="preset_discord">discord.com/app</string>
+    <string name="preset_spotify">open.spotify.com</string>
+    <string name="preset_tidal">listen.tidal.com</string>
 
 </resources>
