--- a/Launcher/App/src/main/res/values/strings.xml
+++ b/Launcher/App/src/main/res/values/strings.xml
@@ -67,6 +67,7 @@
     </string>
 
     <string name="add_website">Add a Website</string>
+    <string name="add_website_tip">Add a Website to the Launcher</string>
     <string name="add_website_url_label">Enter Any Website URL</string>
     <string name="add_website_bad_url">Enter a valid URL and try again</string>
     <string name="add_website_group">Add to %s</string>
