--- a/Launcher/App/src/main/res/values/strings.xml
+++ b/Launcher/App/src/main/res/values/strings.xml
@@ -56,20 +56,21 @@
     </string>
 
     <string name="website_title">Websites in Lightning Launcher</string>
-    <string name="website_subtitle1">Easily Access Web Pages &amp; Apps</string>
+    <string name="website_subtitle1">Easily Access Websites &amp; Web Apps</string>
     <string name="website_info1">
-        Websites will appear as apps on your home screen, and will open in a custom browser in the same window. Any 2D website works.\n
-        \nZoom and dark mode preferences are saved for each website.</string>
+        Websites will appear as apps on your home screen, and will open in a custom browser in the same window. Any 2D website works.
+    </string>
     <string name="website_subtitle2">Audio in the Background</string>
     <string name="website_info2">
-        After being closed, websites will continue running, playing and recording audio in the background.\n
-        \nAn indicator will be shown on the icon of any running website;\nPress it to fully stop that website.
+        After being closed, websites will continue running, and can play and record audio in the background - even while in a game!\n
+        \nAn indicator will be shown on the icon of any running website;\nPress the indicator to fully stop that website.
     </string>
 
     <string name="add_website">Add a Website</string>
     <string name="add_website_tip">Add a Website to the Launcher</string>
     <string name="add_website_url_label">Enter Any Website URL</string>
     <string name="add_website_bad_url">Enter a valid URL and try again</string>
+    <string name="add_website_used_url">This website is already in %1$s</string>
     <string name="add_website_audio_info">Added websites can play audio in-game</string>
     <string name="add_website_group">Add to %s</string>
 
